# Aware

./: .gitignore  CHANGELOG.md  CLAUDE.md  Package.resolved  Package.swift  README.md  TDD_GUIDE.md  TOKEN_OPTIMIZATION_RESULTS.md  analyze_aggressive_optimization.swift  test_optimized_snapshot.swift
.github/workflows/: ci.yml
AwareBridge/: Package.resolved  Package.swift
AwareCore/: Package.swift
AwarePython/: README.md  pyproject.toml
AwarePython/aware_python/: __init__.py  middleware.py  storage.py  tracer.py  types.py
AwarePython/aware_python/api/: __init__.py  routes.py  websocket.py
Sources/GhostUI/: GhostUI.swift
Sources/GhostUIMacros/: AutoLog.swift  AutoLogVerbosity.swift
Sources/GhostUIMacrosPlugin/: AutoLogMacro.swift  CodeGenerator.swift  FunctionAnalyzer.swift  Plugin.swift
Sources/SwiftAware/: SwiftAware.swift
Sources/SwiftAwareMacros/: AutoLog.swift
Sources/SwiftAwareMacrosPlugin/: AutoLogMacro.swift  CodeGenerator.swift  Plugin.swift
Tests/: analyze_token_usage.swift  debug_generator.swift  demo_llm_snapshot.swift  test-aware-core.swift  test_llm_snapshot.swift
Tests/AwareTests/: AwareAsyncTesterTests.swift  AwareIOSTests.swift  AwareIntegrationTests.swift  AwarePerformanceTests.swift  AwareServiceTests.swift
Tests/GhostUIMacrosTests/: AutoLogMacroTests.swift
Tests/GhostUITests/: GhostUITests.swift
Tests/LLMIntegrationTests/: LLMSnapshotTests.swift
Tests/PerformanceBenchmarks/: TokenEfficiencyBenchmarks.swift
Tests/Phase4Testing/: FUTURE_ENHANCEMENTS_SUMMARY.md  LoginView_Instrumented.swift  LoginView_Uninstrumented.swift  (+2 more)
(+140 files in other folders)
