[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aware-python"
version = "0.1.0"
description = "LLM-centric debugging framework for Python backends - enables iOS ↔ Backend correlation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Cogito Labs", email = "team@cogito.cv" }
]
keywords = ["llm", "debugging", "tracing", "observability", "aware"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
]

dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "starlette>=0.27.0",
]

[project.optional-dependencies]
websocket = ["websockets>=11.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://github.com/cogito-labs/aware"
Documentation = "https://github.com/cogito-labs/aware/tree/main/AwarePython"
Repository = "https://github.com/cogito-labs/aware"

[tool.hatch.build.targets.wheel]
packages = ["aware_python"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
